--- a/templates/index.html
+++ b/templates/index.html
@@ -343,7 +343,7 @@
               <div class="member-info">
                 <h4>Hassan Yange</h4>
                 <span>Developer</span>
-                <p>Explicabo voluptatem mollitia et repellat qui dolorum quasi</p>
+                <p>Frontend and Backend developer at FasWebTech🖥💖,AI and co-founder of FastwebTech</p>
                 <div class="social">
                   <a href=""><i class="ri-twitter-fill"></i></a>
                   <a href=""><i class="ri-facebook-fill"></i></a>
@@ -356,11 +356,11 @@
 
           <div class="col-lg-6 mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="member d-flex align-items-start">
-              <div class="pic"><img src="{% static 'assets/img/team/team-3.jpg' %}" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="{% static 'assets/img/team/team-3.JPG' %}" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Adolf Faustine</h4>
                 <span>Developer</span>
-                <p>Aut maiores voluptates amet et quis praesentium qui senda para</p>
+                <p>Frontend and Backend developer at FasWebTech🖥💖,AI and co-founder of FastwebTech</p>
                 <div class="social">
                   <a href=""><i class="ri-twitter-fill"></i></a>
                   <a href=""><i class="ri-facebook-fill"></i></a>
