--- a/templates/index.html
+++ b/templates/index.html
@@ -343,10 +343,10 @@
                 <span>Developer</span>
                 <p>Frontend and Backend developer at FasWebTech🖥💖,AI and co-founder of FastwebTech</p>
                 <div class="social">
-                  <a href=""><i class="ri-twitter-fill"></i></a>
-                  <a href=""><i class="ri-facebook-fill"></i></a>
-                  <a href=""><i class="ri-instagram-fill"></i></a>
-                  <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
+                  <a href="https://twitter.com/hassanyange"><i class="ri-twitter-fill"></i></a>
+                  <a href="https://www.facebook.com/hassan.yange.5"><i class="ri-facebook-fill"></i></a>
+                  <a href="https://www.instagram.com/hassan_yange/"><i class="ri-instagram-fill"></i></a>
+                  <a href="https://www.linkedin.com/in/hassan-yange-54954523b/"> <i class="ri-linkedin-box-fill"></i> </a>
                 </div>
               </div>
             </div>
