--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
           <li><a class="nav-link scrollto" href=" #portfolio ">Portfolio</a></li>
           <li><a class="nav-link scrollto" href="#team ">Team</a></li>
           <li><a href="#">Blog</a></li>      
-          <li><a class="nav-link scrollto" href=" #contact ">Contact</a></li>
+          <li><a class="nav-link scrollto" href="  {% url 'myForm'  %}">Contact</a></li>
         
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -445,77 +445,6 @@
       </div>
     </section><!-- End Frequently Asked Questions Section -->
 
-    <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact">
-      <div class="container" data-aos="fade-up">
-    
-        <div class="section-title">
-          <h2>Contact</h2>
-          <p>Don't hesitate to reach out to us.</p>
-        </div>
-    
-        <div class="row">
-    
-          <div class="col-lg-5 d-flex align-items-stretch">
-            <div class="info">
-              <div class="address">
-                <i class="bi bi-geo-alt"></i>
-                <h4>Location:</h4>
-                <p>Dar es salaam,Tanzania</p>
-              </div>
-    
-              <div class="email">
-                <i class="bi bi-envelope"></i>
-                <h4>Email:</h4>
-                <p>Fastwebtech@gmail.com</p>
-              </div>
-    
-              <div class="phone">
-                <i class="bi bi-phone"></i>
-                <h4>Call:</h4>
-                <p>+255685230096 / +255629653757</p>
-              </div>
-    
-            </div>
-    
-          </div>
-    
-          <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form method="post" action=" {% url 'index' %}"  >
-              {% csrf_token %}
-           
-              <div class="row">
-                <div class="form-group col-md-6">
-                  <label for="name">Your Name</label>
-                
-                  <input type="text" name="name" class="form-control" id="name" required>
-                </div>
-                <div class="form-group col-md-6">
-                  <label for="email">Your Email</label>
-                  
-                  <input type="email" class="form-control" name="email" id="email" required>
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="subject">Subject</label>
-               
-                <input type="text" class="form-control" name="subject" id="subject" required>
-              </div>
-              <div class="form-group">
-                <label for="message">Message</label>
-               
-                <textarea class="form-control" name="message" rows="10" required></textarea>
-              </div>
-          
-              <div class="text-center"><button type="submit" class="btn btn-primary">Send Message</button></div>
-            </form>
-          </div>
-          
-        </div>
-    
-      </div>
-    </section><!-- End Contact Section -->
-    
 
   </main><!-- End #main -->
 
